--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ nav {
 
 
 /*barre de recherche*/
+
+
+
+
 form{
     height: 3vh;
     width: 2vw;
@@ -40,6 +44,38 @@ input{
     height: 4vh;
     text-align: center;
 }
+
+@media (max-width:814px) {
+    form{
+        height: 3vh;
+        width: 2vw;
+        margin-top: 2vh;
+        margin-left: 1%;
+        padding: 10%;
+    
+
+    }
+     
+    input{
+        border-radius: 30px;
+        margin-top: -2vh;
+        height: 4vh;
+        text-align: center;
+    }
+}
+
+
+
+@media (min-width:815px) and (max-width:1629px) {
+    form{
+        height: 3vh;
+        width: 2vw;
+        margin-top: 2vh;
+        margin-left: 1%;
+        padding: 4%;
+    }
+}
+
 /*fin barre de recherche*/
 
 /*accueil navigation*/
@@ -137,6 +173,20 @@ section{
 
 }
 
+@media (max-width:1200px) {
+    .container-colonne{
+        display: flex;
+        flex-direction: column ;
+        flex-wrap: wrap;
+    }
+    
+    .colonne{
+        flex: 1;
+        padding: 10px; 
+    }
+}
+
+/*section3*/
 .container-colonne{
     display: flex;
 }
@@ -144,8 +194,11 @@ section{
 .colonne{
     flex: 1;
     padding: 10px; 
-    border: 1px² solid black;
 }
+
+    
+/*fin section3*/
+
 
 .photo-horizontale{
     display: flex;
@@ -153,7 +206,18 @@ section{
     margin-left: 15%;
     margin-right: 15%;
 }
-
+@media (max-width:1200px) {
+    .photo-horizontale{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        list-style: none;
+        height: 90vh;
+        width: 70vw;
+    }
+}
+    
 
 #section0{
     margin-top: 0vh;
@@ -210,7 +274,24 @@ label{
     border: 1px solid #ccc;
     border-radius: 5px;
 }
+
+@media (max-width:1200px) {
+    .formulaire-de-contact {
+        margin: 100%;
+        width: 60vw;
+        height: 50vh;
+        margin-left: 20%;
+        margin-bottom: 10%;
+        margin-top: 2vh;
+        padding: 1%;
+        background-color: rgb(166, 81, 245);
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+}
   
+
+
 .formulaire-de-contact label {
     display: block;
     margin-bottom: 10px;
@@ -302,6 +383,23 @@ label{
     margin-bottom: 10vh;
 }
 
+@media (max-width:1200px) {
+    #section20{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        font-size: 25px;
+        text-align: center;
+        margin-top:10vh;
+        margin-bottom: 10vh;
+    }
+
+    #section22{
+        width: 80%;
+        margin-left: 5%;
+    }
+}
+
 #section21{
     font-size: 35px;
     text-align: center;
@@ -329,6 +427,19 @@ label{
     padding: 5px; 
     text-align: center; 
 }
+
+
+@media (max-width:1200px) {
+    #gerante{
+        margin: 40%;
+        margin-top: 12vh;
+        margin-bottom: 20vh;
+        padding: 5px;
+        width: 60%; 
+        text-align: center; 
+        margin-left: 20%;
+    }
+}
 /*fin gerante*/
 
 
@@ -355,6 +466,10 @@ label{
 /*fin evenementiel*/
 
 /*cadre*/
+
+
+
+
 .cadre {
     transition: transform 0.5s;
     line-height: 30px; 
@@ -366,7 +481,7 @@ label{
 }
 
 .cadre:hover {
-    transform: scale(1.7);
+    transform: scale(1.5);
 
 }
 
@@ -378,9 +493,6 @@ label{
     transition: all 1.5s;
 }
 
-.cadre:hover::after {
-    transform: rotate(180deg);
-}
 
 
 .liste-horizontale {
@@ -391,6 +503,9 @@ label{
 }
 /*fin cadre*/
 /*Fin de Main entreprise*/
+
+
+
 
 
 
