--- a/style.css
+++ b/style.css
@@ -9,11 +9,12 @@ body{
 .container{
     display: flex;
     flex-direction: row;
-    justify-content:left;
 }    
 
 nav {
     padding-top: 0.5%;
+    width: 80vw;
+    height: 10vh;
 }
 
 /*bande violette*/
@@ -25,27 +26,55 @@ nav {
 /*barre de recherche*/
 
 
-
-
 form{
-    height: 3vh;
-    width: 2vw;
-    margin-top: 2vh;
-    margin-left: 180%;
-    padding: 0.2%;
-    padding-right: -60%;
+    margin-top: 10vh;
+   
 }
 
 
 
-input{
+#input_nav{
+    width: 10vw;
+    height: 4vh;
+    margin-left: 1%;
+    padding: 10%;
     border-radius: 30px;
-    margin-top: -2vh;
+    border: 1px solid #ccc;
+}
+
+@media (max-width: 1002px) {
+    #input_nav{
+        width: 30vw;
+        height: 4vh;
+        margin-left: 1%;
+        padding: 10%;
+        border-radius: 30px;
+        border: 1px solid #ccc;
+    }
+
+    nav {
+        padding-top: 0.5%;
+        width: 80vw;
+        height: 30vh;
+    }
+}
+
+input{
+
+    border-radius: 30px;
+   margin-bottom: 10vh;
+
     height: 4vh;
     text-align: center;
 }
 
 @media (max-width:814px) {
+    nav {
+        padding-top: 0.5%;
+        width: 80vw;
+        height: 30vh;
+    }
+
     form{
         height: 3vh;
         width: 2vw;
@@ -130,7 +159,13 @@ h1 {
     color: rgb(166, 81, 245);
     text-shadow: 4px 4px 4px rgba(0, 0, 0, 20);
 }
-
+@media screen and (max-width: 1000px) {
+    h1 {
+        font-size: 2.9em;
+        text-align: center;
+    }
+    
+}
 h2{
     font-size: 2.5em;
     text-align: center;
@@ -265,7 +300,7 @@ label{
 .formulaire-de-contact {
     margin: 100%;
     width: 30vw;
-    height: 50vh;
+    height: 53vh;
     margin-left: 34%;
     margin-bottom: 10%;
     margin-top: 2vh;
@@ -275,12 +310,12 @@ label{
     border-radius: 5px;
 }
 
-@media (max-width:1200px) {
+@media (max-width:900px) {
     .formulaire-de-contact {
         margin: 100%;
-        width: 60vw;
-        height: 50vh;
-        margin-left: 20%;
+        width: 30vw;
+        height: 56vh;
+        margin-left: 30%;
         margin-bottom: 10%;
         margin-top: 2vh;
         padding: 1%;
@@ -425,7 +460,7 @@ label{
     margin-top: 12vh;
     margin-bottom: 20vh;
     padding: 5px; 
-    text-align: center; 
+    margin-left:38%;
 }
 
 
@@ -436,8 +471,7 @@ label{
         margin-bottom: 20vh;
         padding: 5px;
         width: 60%; 
-        text-align: center; 
-        margin-left: 20%;
+        margin-left: 10%;
     }
 }
 /*fin gerante*/
@@ -459,14 +493,17 @@ label{
 #evenementiel{
     margin-top: 2vh;
     margin-bottom: 20vh;
-    padding: 20%;
+    margin-left: 3%;
+    padding: 10%;
     padding-top: 0%;
     padding-bottom: 0%;
 }
 /*fin evenementiel*/
 
 /*cadre*/
-
+.texte-superpose{
+    margin-left: 12%;
+}
 
 
 
@@ -481,7 +518,7 @@ label{
 }
 
 .cadre:hover {
-    transform: scale(1.5);
+    transform: scale(1.3);
 
 }
 
